RRDTOOL NEWS
============


##########################################
Functional Changes between 1.3.x and 1.4.x
------------------------------------------

RRDcached Accelerator
---------------------
tbd

RRDdump
-------
* no more spaces in output
* additional option: --header {none,xsd,dtd}